Fixed minor css flaw. Added ServletInitializer and SpingApplication annotation. Now the war works in a local tomcat.

--- a/src/main/resources/static/css/stats.css
+++ b/src/main/resources/static/css/stats.css
@@ -28,7 +28,7 @@ body {
     height: 100%;
     left: 0px;
     position: absolute;
-    top 0px;
+    top: 0px;
 }
 
 .entry-percentage__value {
